--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 
 
-
-
-body {
-    
-    font-family: "inter" , sans-serif;
+/* CSS Variables */
+:root {
+    --primary-font: "inter", sans-serif;
+    --secondary-font: "Macondo", cursive ;
+    --primary-color:#3a2620; /* dark brown */
+    --secondary-color: #aa9581;
+    --highlight-color: #416a8e;
+    --light-highlight-color: #7a9fc2;
 }
 
-h1 {
-    font-family: "Macondo", cursive;
+/* Global styles */
+
+body {
+    font-family: var(--primary-font);
+}
+h1, h2, h3 {
+    font-family: var(--secondary-font);
+    color: var(--primary-color);
+}
+
+.sub-heading-color {
+    color: var(--highlight-color);
+}
+
+/* grid visualisation CSS for testing */
+
+.container,
+.row {
+    border: 2px solid black;
+}
+
+.col-12 {
+    border: 2px solid white;
+    background-color: lightgray;
 }
