--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ h1, h2, h3 {
     color: var(--highlight-color);
 }
 
-/* grid visualisation CSS for testing */
+/* grid visualisation CSS for testing
 
 .container,
 .row {
@@ -37,4 +37,4 @@ h1, h2, h3 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
+} */
