--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,3 +38,13 @@ h1, h2, h3 {
     border: 2px solid white;
     background-color: lightgray;
 } */
+
+
+/* Navbar */
+#navbar {
+    background-color: var(--primary-color);
+}
+
+#navbar .logo {
+    width: 30px;
+}
