--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,17 @@ body {
 h1, h2, h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+    text-transform: uppercase;
 }
 
 .sub-heading-color {
     color: var(--highlight-color);
 }
 
+.section {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
 /* grid visualisation CSS for testing
 
 .container,
@@ -47,4 +52,10 @@ h1, h2, h3 {
 
 #navbar .logo {
     width: 30px;
+}
+
+/* Header */
+
+#header .lead {
+    font-family: var(--secondary-font);
 }
