Style buttons to match color scheme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,33 @@ h2 {
 } */
 
 
+/* Buttons */
+
+.custom-button-filled {
+   
+    background-color: var(--highlight-color);
+    color: white;
+}
+
+.custom-button-filled:hover {
+  border: 2px solid var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: white;
+}
+
+.custom-button-outline {
+    padding: 7px 25px;
+    border: 2px solid var(--highlight-color);
+    color: var(--highlight-color);
+
+}
+
+.custom-button-outline:hover {   
+    background-color: var(--highlight-color);
+    color: white;
+    
+}
+
 /* Navbar */
 #navbar {
     background-color: var(--primary-color);
