--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,28 @@
-/* Google Fonts */
-
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
-
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Macondo&display=swap');
 
 /* CSS Variables */
 :root {
-    --primary-font: "inter", sans-serif;
-    --secondary-font: "Macondo", cursive ;
-    --primary-color:#3a2620; /* dark brown */
-    --secondary-color: #aa9581;
-    --highlight-color: #416a8e;
-    --light-highlight-color: #7a9fc2;
-    --highlight-color-light: #7a9fc7;
-
+    --primary-font: "Inter", sans-serif;
+    --secondary-font: "Macondo", cursive;
+    --primary-color: #3a2620; /* dark brown */
+    --secondary-color: #aa9581; /* light brown */
+    --highlight-color: #416a8e; /* blue */
+    --highlight-color-light: #7a9fc2; /* light blue */
 }
 
 /* Global styles */
 
 body {
     font-family: var(--primary-font);
-    padding-top: 57.15px;
+    padding-top: 57.15px; /* pushes the top of the header down under fixed navbar */
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
-   
 }
 
 h1,
@@ -37,59 +35,40 @@ h2 {
 }
 
 .sub-heading-color {
-    color: var(--highlight-color-light);
+    color: var(--highlight-color);
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem; /* prevent navbar overlap */
 }
-/* grid visualisation CSS for testing
-
-.container,
-.row {
-    border: 2px solid black;
-}
-
-.col-12 {
-    border: 2px solid white;
-    background-color: lightgray;
-} */
-
 
 /* Buttons */
 
 .custom-button-filled {
-   
+    border: 2px solid var(--highlight-color);
     background-color: var(--highlight-color);
     color: white;
 }
 
 .custom-button-filled:hover {
-  border: 2px solid var(--secondary-color);
+    border: 2px solid var(--secondary-color);
     background-color: var(--secondary-color);
     color: white;
 }
 
 .custom-button-outline {
+    border: 3px solid var(--highlight-color);
     padding: 7px 25px;
-    border: 2px solid var(--highlight-color);
-    color: var(--highlight-color);
-
+    color: var(--highlight-color)
 }
 
-.custom-button-outline:hover {   
+.custom-button-outline:hover {
     background-color: var(--highlight-color);
-    color: white;
-    
+    color: white
 }
-
-.sharp-corners {
-    border-radius: 0;
-}
-
 
 /* Navbar */
+
 #navbar {
     background-color: var(--primary-color);
 }
@@ -116,6 +95,26 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
+/* Events */
+
+#events .table {
+    /* events table font size small enough that 
+      the table doesn't overflow on xs screens. 
+      Size set back to 1rem in a media query 
+      for sm screens and up */
+    font-size: 0.7rem;
+}
+
+.student-discount {
+    background-color: var(--highlight-color);
+    font-weight: bold;
+    color: white;
+    display: block;
+    max-width: 300px;
+    margin: auto;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+}
 /* Game library cards */
 
 #new-games .card,
@@ -123,7 +122,7 @@ h2 {
     border: none;
 }
 
-/* Footer / Contact  */
+/* Footer / contact */
 
 #contact {
     background-color: var(--primary-color);
@@ -136,7 +135,7 @@ h2 {
 }
 
 #contact .sub-heading-color {
-    color: var();
+    color: var(--highlight-color-light);
 }
 
 #contact i {
@@ -148,6 +147,8 @@ h2 {
 #contact .social-links i {
     color: var(--highlight-color-light);
     font-size: 1.9rem;
+    -webkit-transition: color 0.3s ease-in-out;
+    -o-transition: color 0.3s ease-in-out;
     transition: color 0.3s ease-in-out;
 }
 
@@ -159,48 +160,25 @@ h2 {
     background-color: transparent;
 }
 
-/* #event .table {
-    margin-right: 1rem;
-} */
-
-
-
-/* grid visualisation CSS for testing */
-
-/* .container,
-.row {
-    border: 2px solid black;
-}
-
-.col-12 {
-    border: 2px solid white;
-    background-color: lightgray;
-} 
-
-
 /* Media queries */
 
-/* Medium devices (tablets, 320px and up) */
-
-@media screen and (min-width: 320px) {
-    /* Make all service cards the same height for consistency */
-    
+/* Small screens and up */
+@media screen and (min-width: 576px) {
+    /* increase font size in events table when screen size is large enough */
+    #events .table {
+        font-size: 1rem;
+    }
+    .student-discount {
+        font-size: 1rem;
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
-
 @media screen and (min-width: 768px) {
     /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: 191px;
     }
-
-    /* .event-paragraph .table {
-        justify-content: start;
-        margin: 0.5rem;
-    } */
-
-   
 }
 
 /* Large devices (small laptops, 992px and up) */
@@ -209,10 +187,6 @@ h2 {
     #services .card-body {
         min-height: auto;
     }
-
-   /* .table .event-paragraph {
-        display: inline-flex;
-    } */
 }
 
 /* xl devices (large desktops, 1200px and up) */
